--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <h4>R Notebook Exercises ( MUGI.UPV 2018 )</h4>
                 <p>``This is a series of R notebook notebook exercises used on business analytic classes. They are classical examples and are presented as reference to the specific solutions and the use of essential libraries, such as GGPlot. Only the knitted html documents are presented on the following links, from the more complex to the simpler cases: </p>
                 <ul>
-                  <li><a href="/r_notebook/Elantra3.html">Elantra Car Sales</a></li>
+                  <li><a href="/files/r_notebook/Elantra3.html">Elantra Car Sales</a></li>
                   <li>The Statistical Sommelier</li>
                   <li>An analytical detective</li>
                   <li>Climate Change</li>
