--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Mar 05 2019 09:32:36 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Mar 06 2019 14:40:13 GMT+0000 (UTC)  -->
 <html data-wf-page="5bfc3fffe21447fcc276667f" data-wf-site="5bfc3fffe21447455c76667b">
 <head>
   <meta charset="utf-8">
@@ -130,9 +130,43 @@
             <h4>Wireline &amp; Testing Field Engineer</h4>
             <blockquote>working for the <a href="https://www.slb.com/" target="_blank">Schlumberger</a> Wireline &amp; Testing division, was responsible for operational team conducting geological survey using wireline sensor probes and other oilfield related tasks, such as pipe cutting and punching using specialized remote operated probes. Most of the work time was spent on the land fields of Duri, Indonesia, but activities and training were developed in Mossoró, Brazil; Worcester, England; El Tigre, Venezuela; Duri, Indonesia; Macaé, Brazil and Comodoro Rivadavia, Argentina.</blockquote>
             <h4>Telecommunications Regulatory Specialist</h4>
-            <blockquote>working for the Agência Nacional de Telecomunicações, ANATEL, Brasilia (Brazil) as an Engineer providing support to field operation of the technical regulatory enforcement department, mostly on the specification and procurement of measurement equipment, calibration and maintenance services. Took on several missions as Brazilian representative for International Telecommunications Union (ITU), specially for the spectrum monitoring working party (WP1C), within the radio communications sector.</blockquote>
+            <blockquote>working for the <a href="http://www.anatel.gov.br/institucional/" target="_blank">Agência Nacional de Telecomunicações, ANATEL</a>, Brasilia (Brazil) as an Engineer providing support to field operation of the technical regulatory enforcement department, mostly on the specification and procurement of measurement equipment, calibration and maintenance services. Took on several missions as Brazilian representative for International Telecommunications Union (ITU), specially for the spectrum monitoring working party (WP1C), within the radio communications sector.</blockquote>
             <h2>Language</h2>
-            <p>‍</p>
+            <p>Assessment using <a href="https://europass.cedefop.europa.eu/sites/default/files/cefr-en.pdf" target="_blank">Common European Framework of Reference for Languages</a>. Mother language is the Brazilian Portuguese. English assessment by International English Language Testing System Certificate, IELTS. Spanish assessment by Enforex, Centro de Estudios Internacionales with additional use during more than 2.5 years living in Spain. French level by initial education with private instructor.</p>
+          </div>
+          <div class="w-layout-grid grid"><img src="images/012-open-book.svg" alt="Reading Skill" id="w-node-b25a93e8757e-c276667f">
+            <div id="w-node-ebe61679b18a-c276667f"><img src="images/portugal.svg" alt="Português" class="image-3">
+              <p class="paragraph-4">Português</p>
+            </div>
+            <div id="w-node-b512a68a8a14-c276667f"><img src="images/united-kingdom.svg" alt="English" class="image-3">
+              <p class="paragraph"> English </p>
+            </div>
+            <div id="w-node-a477da82d808-c276667f"><img src="images/spain.svg" alt="Castellano" class="image-3">
+              <p class="paragraph-2">Castellano</p>
+            </div>
+            <div id="w-node-92b6a8ef2aaa-c276667f"><img src="images/france.svg" alt="Français" class="image-3">
+              <p class="paragraph-3">Français</p>
+            </div><img src="images/043-listening.svg" alt="Listening Skill" id="w-node-edb9be73db43-c276667f"><img src="images/042-conversation.svg" alt="Spoken interaction" id="w-node-0b615b1ef7b6-c276667f">
+            <p id="w-node-8e49078ed4d6-c276667f" class="languageprof">C2</p>
+            <p id="w-node-9b0a0d6b4d72-c276667f" class="languageprof">C1</p>
+            <p id="w-node-627a4eba3266-c276667f" class="languageprof">A2</p><img src="images/044-speaking.svg" alt="Spoken production" id="w-node-c292d3060bf6-c276667f">
+            <p id="w-node-5c24c0f7c020-c276667f" class="languageprof">C2</p>
+            <p id="w-node-c8b2c5d0055b-c276667f" class="languageprof">C2</p>
+            <p id="w-node-9748561c50df-c276667f" class="languageprof">C1</p>
+            <p id="w-node-c564cfe993ab-c276667f" class="languageprof">A2</p><img src="images/018-pencil.svg" alt="Writing Skill" id="w-node-e6c23eeba6fc-c276667f">
+            <p id="w-node-a7f783c4adf8-c276667f" class="languageprof">C2</p>
+            <p id="w-node-e9b512c19daf-c276667f" class="languageprof">C2</p>
+            <p id="w-node-5198b4b5916c-c276667f" class="languageprof">C1</p>
+            <p id="w-node-a2d990dab107-c276667f" class="languageprof">A1</p>
+            <p id="w-node-8d8900f1d5ed-c276667f" class="languageprof">C2</p>
+            <p id="w-node-779b892c937d-c276667f" class="languageprof">C2</p>
+            <p id="w-node-04459150ae0c-c276667f" class="languageprof">C2</p>
+            <p id="w-node-2d2bf740ea15-c276667f" class="languageprof">C1</p>
+            <p id="w-node-7cbddf45451b-c276667f" class="languageprof">A1</p>
+            <p id="w-node-74c3e4c19723-c276667f" class="languageprof">C2</p>
+            <p id="w-node-a8710ac150b6-c276667f" class="languageprof">C1</p>
+            <p id="w-node-3ede6b51c392-c276667f" class="languageprof">B2</p>
+            <p id="w-node-f218130ec4dc-c276667f" class="languageprof">A1</p>
           </div>
         </div>
       </div>
@@ -166,11 +200,6 @@
       </div>
     </div>
     <div id="Docs_and_more">
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
       <div class="hero-container w-container">
         <div>
           <h1 class="heading">Docs &amp; More</h1>
@@ -179,7 +208,7 @@
             <div class="w-row">
               <div class="w-clearfix w-col w-col-1 w-col-medium-1 w-col-small-1 w-col-tiny-tiny-stack"><img src="images/united-kingdom.svg" width="30" height="30" alt="Text in english" class="image-2"></div>
               <div class="w-col w-col-11 w-col-medium-11 w-col-small-11 w-col-tiny-tiny-stack">
-                <h4>Network of Telecommunication Regulatory Agencies (MUGI.UPV 2018 )</h4>
+                <h4><a href="documents/20181002-MUGI-AWC-Cybermetrics_Project-Fabio_Santos-Liliana_Bayona.pdf">Network of Telecommunication Regulatory Agencies (MUGI.UPV 2018 )</a></h4>
                 <p>This report presents &quot;<em>a prospective study about the presence and impact on the internet of the national authorities responsible for the regulation of the telecommunications market, comparing their activity to identify leaders that may be pointing the way for more encompassing communication strategies over the web</em>&quot;. Basic website metrics were conducted using python scraping tools and additional analysis were conducted using web analytics tools, such as Followerwonk, Commentpicker and Gephi.</p>
               </div>
             </div>
@@ -189,7 +218,7 @@
               <div class="w-clearfix w-col w-col-1 w-col-small-1"><img src="images/spain.svg" width="30" height="30" alt="Text in english" class="image-2"></div>
               <div class="w-col w-col-11 w-col-small-11">
                 <h4>Twitter Sentiment Analysis ( MUGI.UPV 2018 )</h4>
-                <p>On this project I developed a dashboard for visualization of tweeter behaviour using sentiment analysis. The basis for the sentiment analysis applies sentistrength and spanish word libraries and it was used to create a showcase on twitter analysis for the public transportation companies that provide services in Valencia. The modules created in Python 3 </p>
+                <p>On this project I worked on a dashboard for the visualization of tweeter behaviour using sentiment analysis. The basis for the sentiment analysis applies <a href="http://sentistrength.wlv.ac.uk/" target="_blank">Sentistrength</a> and spanish word libraries and it was used to create a showcase on twitter analysis for the public transportation companies that provide services in Valencia. The modules were created in Python 3 and are available at github at <a href="https://github.com/FSLobao/TweetSense" target="_blank">https://github.com/FSLobao/TweetSense</a>. <br><br>A sample resulting dashport for the case study can be seen at this <a href="files/tweetsense/dashboard.html">demo page</a>. </p>
               </div>
             </div>
           </div>
@@ -197,14 +226,14 @@
             <div class="w-row">
               <div class="w-clearfix w-col w-col-1"><img src="images/united-kingdom.svg" width="30" height="30" alt="Text in english" class="image-2"></div>
               <div class="w-col w-col-11">
-                <h4>R Notebook Exercises ( MUGI.UPV 2018 )</h4>
-                <p>``This is a series of R notebook notebook exercises used on business analytic classes. They are classical examples and are presented as reference to the specific solutions and the use of essential libraries, such as GGPlot. Only the knitted html documents are presented on the following links, from the more complex to the simpler cases: </p>
-                <ul>
-                  <li><a href="/files/r_notebook/Elantra3.html">Elantra Car Sales</a></li>
-                  <li>The Statistical Sommelier</li>
-                  <li>An analytical detective</li>
-                  <li>Climate Change</li>
-                  <li>Cycling in Austin</li>
+                <h4>Basic R Exercises ( MUGI.UPV 2018 )</h4>
+                <p>This is a series of basic R exercises used on business analytic classes. They are classical examples and are presented as reference to the specific solutions and the use of essential libraries, such as GGPlot. Only the knitted html documents produced by R Studio are presented on the following links, ordered from the more complex to the simpler cases. The original datasets can be downloaded from hyperlinks created over the filenames on the knitted html files: </p>
+                <ul class="standard_list">
+                  <li><a href="files/r-notebook/elantra.html">Elantra Car Sales</a></li>
+                  <li><a href="files/r-notebook/wine.html" target="_blank">The Statistical Sommelier</a></li>
+                  <li><a href="files/r-notebook/crime.html" target="_blank">An analytical detective</a></li>
+                  <li><a href="files/r-notebook/climate-change.html" target="_blank">Climate Change</a></li>
+                  <li><a href="files/r-notebook/cycling.html" target="_blank">Cycling in Austin</a></li>
                 </ul>
               </div>
             </div>
@@ -213,8 +242,8 @@
             <div class="w-row">
               <div class="w-clearfix w-col w-col-1 w-col-medium-1 w-col-small-1"><img src="images/spain.svg" width="30" height="30" alt="Text in english" class="image-2"></div>
               <div class="w-col w-col-11 w-col-medium-11 w-col-small-11">
-                <h4>Presentación de Datos Masivos en Contexto Geográfico ( MUGI.UPV 2018)</h4>
-                <p>This report (Spanish) makes a brief introduction to geographic information systems (GIS) amd explores a few applications and services that might be used with the objective of exploring and presenting massive data within a geographic context.</p>
+                <h4><a href="documents/20180116---MUGI-IMM---Final---Fabio-Santos-Lobao.pdf">Presentación de Datos Masivos en Contexto Geográfico ( MUGI.UPV 2018)</a></h4>
+                <p>This report (Spanish) makes a brief introduction to geographic information systems (GIS) amd explores a few applications and services that might be used with the objective of exploring and presenting massive data within a geographic context. Interesting for its review of current tools that are available for the general public, a development on the recent years that has much in contrast to the initial developments over specialized tools.</p>
               </div>
             </div>
           </div>
@@ -270,15 +299,37 @@
       <div class="hero-container w-container">
         <div>
           <h1 class="heading">Ideas &amp; Life Hacks</h1>
-          <div data-animation="slide" data-duration="500" data-infinite="1" class="w-slider">
+          <p>Here are some ideas, solutions, tricks and things that I learned or developed and that were quite useful to me on various occasions, so I&#x27;m posting then on the expectation that they might help somebody else.</p>
+          <div data-delay="0" data-animation="slide" data-autoplay="1" data-autoplay-limit="500" data-duration="500" data-infinite="1" class="slider w-slider">
             <div class="w-slider-mask">
               <div class="w-slide">
+                <h4>Hyper-V and Redhat, Creating a development network</h4>
+                <p>On this video I present a brief tutorial on how to install redhat within an Hyper-V virtual machine and configure it with internet access and a virtual LAN connection to create a development server, including configuration of windows host file to enable easy access.</p>
                 <div style="padding-top:56.17021276595745%" id="w-node-1f8ca398334e-c276667f" class="w-embed-youtubevideo"><iframe src="https://www.youtube.com/embed/Rkd22El8984?rel=0&amp;controls=1&amp;autoplay=1&amp;mute=1&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></div>
               </div>
               <div class="w-slide">
-                <div data-autoplay="true" data-loop="true" data-wf-ignore="true" data-video-urls="" class="w-background-video w-background-video-atom"><video autoplay="" loop="" muted="" playsinline="" data-wf-ignore="true"></video></div>
+                <h4>Electronic Equipment Rescue</h4>
+                <p>What can I say... I love others people electronic trash and I believe its a shame that people though away useful things. Just on the recent years I recovered one scanner, two laser printers, one tablet, one ebook reader, one access point/repeater, a solar powered GPS, a table calculator and a led torch light. </p>
+                <p>Most of the time there are minor mechanical defects or even straight forward electronic problems that can be fixed with no special tool and just a bit of understanding. Just surf the internet and you may find a solution straight away. Sometimes is just a matter of finding the appropriate software driver or cleaning up the equipment with alcohol. </p>
+                <p class="usbgroundfix">On this picture is temporary fix to an USB interface board of a printer that was not working due to problems on the connector grounding</p><img src="images/IMG_20181026_195721.jpg" srcset="images/IMG_20181026_195721.jpg 500w, images/IMG_20181026_195721.jpg 800w, images/IMG_20181026_195721.jpg 1080w, images/IMG_20181026_195721.jpg 1280w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 718px, 930px" alt=""></div>
+              <div class="w-slide">
+                <h4>Waiter Aid Mobile App</h4>
+                <p>On this video I present an idea for an mobile app that could be used by restaurants to speed-up table services. The mock app was developed using http://www.seattleclouds.com. Explanation in spanish.<br></p>
+                <div style="padding-top:56.17021276595745%" id="w-node-7e4520ec7f29-c276667f" class="w-embed-youtubevideo"><iframe src="https://www.youtube.com/embed/7cT8uq_SPRI?rel=0&amp;controls=1&amp;autoplay=1&amp;mute=1&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></div>
               </div>
-              <div class="w-slide"></div>
+              <div class="w-slide">
+                <h4>Cork door stopper</h4>
+                <p>My doors were banging with Valencia wind and I got some wine inspiration for these nice door stoppers. Effective and simple solution to reuse some corks. The only problem is that I had to take more bottles to make stoppers to all the doors. </p><img src="images/cork-door-stopper.jpg" srcset="images/cork-door-stopper-p-500.jpeg 500w, images/cork-door-stopper-p-800.jpeg 800w, images/cork-door-stopper.jpg 1024w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 718px, 930px" alt=""></div>
+              <div class="w-slide">
+                <h4>Secure P2P distributed services using blockchain </h4>
+                <p>On this video I present the idea of combining blockchain and pear-2-pear technologies to provide secure cloud services specially data storage, file sharing and serverless support to applications.</p>
+                <div style="padding-top:56.17021276595745%" id="w-node-306616bf0aab-c276667f" class="w-embed-youtubevideo"><iframe src="https://www.youtube.com/embed/vRmc2NoDULI?rel=0&amp;controls=1&amp;autoplay=1&amp;mute=1&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></div>
+              </div>
+              <div class="w-slide">
+                <h4>Using Joomla! CMS and Fabrik to create an application interface.</h4>
+                <p>On this video I present a demo of a simple GUI developed using Joomla!, Fabrik, Quix and T3. More videos on how this app include an explanation on the design process (<a href="https://youtu.be/FcFQtO17VS0" target="_blank">https://youtu.be/FcFQtO17VS0</a>), the use of Fabrik (<a href="https://youtu.be/mq6rCarFOts" target="_blank">https://youtu.be/mq6rCarFOts</a> and <a href="https://youtu.be/Vcor_rypuLY" target="_blank">https://youtu.be/Vcor_rypuLY</a>) the creation of the database (<a href="https://youtu.be/ZvOrM0TOm2g" target="_blank">https://youtu.be/ZvOrM0TOm2g</a>) the use of Quix (<a href="https://youtu.be/FkyqybXu0RQ" target="_blank">https://youtu.be/FkyqybXu0RQ</a>) and T3 (<a href="https://youtu.be/lCU_epvfkW0" target="_blank">https://youtu.be/lCU_epvfkW0</a>)</p>
+                <div style="padding-top:56.17021276595745%" id="w-node-2f0b781edeec-c276667f" class="w-embed-youtubevideo"><iframe src="https://www.youtube.com/embed/FHQqSCFnQcc?rel=0&amp;controls=1&amp;autoplay=1&amp;mute=1&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></div>
+              </div>
             </div>
             <div class="w-slider-arrow-left">
               <div class="w-icon-slider-left"></div>
@@ -288,21 +339,6 @@
             </div>
             <div class="w-slider-nav w-round"></div>
           </div>
-          <div class="rtb-list w-richtext">
-            <p>Here are some ideas, solutions, tricks and things that I learned or developed and that were quite useful to me on various occasions, so I&#x27;m posting then on the expectation that they might help somebody else.</p>
-            <ul>
-              <li>Cork door stopper</li>
-              <li>Electronic Equipment Rescue</li>
-              <li>Optimum color scale for human visual discrimination </li>
-              <li>GPS and Compass calibration.</li>
-              <li>Passive cooling equipment hack</li>
-              <li><a href="https://youtu.be/Rkd22El8984" target="_blank">Hyper-V Development Network</a></li>
-              <li>Secure P2P distributed services using blockchain </li>
-              <li>Waiter Aid Mobile App</li>
-              <li>Using Joomla! CMS and Fabrik to create an application interface.</li>
-            </ul>
-          </div>
-          <div class="w-layout-grid"></div>
         </div>
       </div>
     </div>
