--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Mar 06 2019 15:02:58 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Mar 06 2019 15:16:30 GMT+0000 (UTC)  -->
 <html data-wf-page="5bfc3fffe21447fcc276667f" data-wf-site="5bfc3fffe21447455c76667b">
 <head>
   <meta charset="utf-8">
@@ -89,7 +89,7 @@
             </a>
           </div>
           <div data-ix="tile-4" class="_33block">
-            <div class="w-clearfix"><a href="https://twitter.com/LobaoFabio" class="social-block twitter w-inline-block"></a><a href="http://www.linkedin.com/in/fslobao" class="social-block linkedin w-inline-block"></a><a href="https://www.researchgate.net/profile/Fabio_Santos_Lobao" target="_blank" class="social-block researchgate w-inline-block"></a><a href="http://scholar.google.com.br/citations?user=hxWODQwAAAAJ&amp;hl" class="social-block schoolargoogle w-inline-block"></a></div>
+            <div class="w-clearfix"><a href="https://twitter.com/LobaoFabio" target="_blank" class="social-block twitter w-inline-block"></a><a href="http://www.linkedin.com/in/fslobao" target="_blank" class="social-block linkedin w-inline-block"></a><a href="https://www.researchgate.net/profile/Fabio_Santos_Lobao" target="_blank" class="social-block researchgate w-inline-block"></a><a href="http://scholar.google.com.br/citations?user=hxWODQwAAAAJ&amp;hl" target="_blank" class="social-block schoolargoogle w-inline-block"></a></div>
           </div>
         </div>
       </div>
@@ -351,7 +351,7 @@
             </a>
           </div>
           <div class="footer-link-col w-clearfix w-col w-col-6"><a href="/blog" class="nav-link footer-link">Ideas &amp; Life Hacks</a><a href="#Docs_and_more" class="nav-link footer-link">Docs &amp; More</a><a href="/portfolio" class="nav-link footer-link">PROJECTS</a><a href="/about" class="nav-link footer-link">About</a></div>
-          <div class="w-clearfix w-col w-col-3"><a href="https://twitter.com/LobaoFabio" class="social-block twitter small w-inline-block"></a><a href="http://www.linkedin.com/in/fslobao" class="social-block linkedin small w-inline-block"></a><a href="https://www.researchgate.net/profile/Fabio_Santos_Lobao" target="_blank" class="social-block researchgate small w-inline-block"></a><a href="http://scholar.google.com.br/citations?user=hxWODQwAAAAJ&amp;hl" class="social-block schoolargoogle small w-inline-block"></a></div>
+          <div class="w-clearfix w-col w-col-3"><a href="https://twitter.com/LobaoFabio" target="_blank" class="social-block twitter small w-inline-block"></a><a href="http://www.linkedin.com/in/fslobao" target="_blank" class="social-block linkedin small w-inline-block"></a><a href="https://www.researchgate.net/profile/Fabio_Santos_Lobao" target="_blank" class="social-block researchgate small w-inline-block"></a><a href="http://scholar.google.com.br/citations?user=hxWODQwAAAAJ&amp;hl" target="_blank" class="social-block schoolargoogle small w-inline-block"></a></div>
         </div>
       </div>
     </div>
