--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
               <div class="logo-text footer-logo">Fábio S. <strong data-new-link="true">Lobão</strong></div>
             </a>
           </div>
-          <div class="footer-link-col w-clearfix w-col w-col-6"><a href="/blog" class="nav-link footer-link">Ideas &amp; Life Hacks</a><a href="#Docs_and_more" class="nav-link footer-link">Docs &amp; More</a><a href="/portfolio" class="nav-link footer-link">PROJECTS</a><a href="/about" class="nav-link footer-link">About</a></div>
+          <div class="footer-link-col w-clearfix w-col w-col-6"><a href="#Ideas_and_Life_Hacks" class="nav-link footer-link">Ideas &amp; Life Hacks</a><a href="#Docs_and_more" class="nav-link footer-link">Docs &amp; More</a><a href="#Projects" class="nav-link footer-link">PROJECTS</a><a href="#About" class="nav-link footer-link">About</a></div>
           <div class="w-clearfix w-col w-col-3"><a href="https://twitter.com/LobaoFabio" target="_blank" class="social-block twitter small w-inline-block"></a><a href="http://www.linkedin.com/in/fslobao" target="_blank" class="social-block linkedin small w-inline-block"></a><a href="https://www.researchgate.net/profile/Fabio_Santos_Lobao" target="_blank" class="social-block researchgate small w-inline-block"></a><a href="http://scholar.google.com.br/citations?user=hxWODQwAAAAJ&amp;hl" target="_blank" class="social-block schoolargoogle small w-inline-block"></a></div>
         </div>
       </div>
