--- a/detail_projects.html
+++ b/detail_projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Mar 06 2019 15:16:30 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Mar 07 2019 11:03:55 GMT+0000 (UTC)  -->
 <html data-wf-page="5bfc3fffe21447d1a1766689" data-wf-site="5bfc3fffe21447455c76667b">
 <head>
   <meta charset="utf-8">
@@ -104,7 +104,7 @@
             <div class="logo-text footer-logo">Fábio S. <strong data-new-link="true">Lobão</strong></div>
           </a>
         </div>
-        <div class="footer-link-col w-clearfix w-col w-col-6"><a href="/blog" class="nav-link footer-link">Ideas &amp; Life Hacks</a><a href="#" class="nav-link footer-link">Docs &amp; More</a><a href="/portfolio" class="nav-link footer-link">PROJECTS</a><a href="/about" class="nav-link footer-link">About</a></div>
+        <div class="footer-link-col w-clearfix w-col w-col-6"><a href="#" class="nav-link footer-link">Ideas &amp; Life Hacks</a><a href="#" class="nav-link footer-link">Docs &amp; More</a><a href="#" class="nav-link footer-link">PROJECTS</a><a href="#" class="nav-link footer-link">About</a></div>
         <div class="w-clearfix w-col w-col-3"><a href="https://twitter.com/LobaoFabio" target="_blank" class="social-block twitter small w-inline-block"></a><a href="http://www.linkedin.com/in/fslobao" target="_blank" class="social-block linkedin small w-inline-block"></a><a href="https://www.researchgate.net/profile/Fabio_Santos_Lobao" target="_blank" class="social-block researchgate small w-inline-block"></a><a href="http://scholar.google.com.br/citations?user=hxWODQwAAAAJ&amp;hl" target="_blank" class="social-block schoolargoogle small w-inline-block"></a></div>
       </div>
     </div>
