includ tag manager

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <!--  Last Published: Thu Mar 07 2019 11:03:55 GMT+0000 (UTC)  -->
 <html data-wf-page="5bfc3fffe21447fcc276667f" data-wf-site="5bfc3fffe21447455c76667b">
 <head>
+  <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5T8HG47');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title>Fábio Santos Lobão personal page</title>
   <meta content="Documents, ideas and life hacks by Fábio, a brief description of things that are and things to come." name="description">
@@ -23,6 +30,10 @@
   <meta name="google-site-verification" content="9Oc4rVHwaMsa9H98Ar0wnTJiiyNWYPzqAiybhKF-e50">
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5T8HG47"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <div class="w-clearfix"><a href="#Top" data-w-id="eb21e57b-2759-4ecb-41a7-f6df4e068552" class="back_to_top w-button">Back</a>
     <div class="contact-overlay">
       <div class="w-container"><a href="#" data-ix="close-contact-overlay" class="close-link">CLOSE ✕</a>
