--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="w-clearfix w-col w-col-1"><img src="images/united-kingdom.svg" width="30" height="30" alt="Text in english" class="image-2"></div>
               <div class="w-col w-col-11">
                 <h4><a href="documents/20190916_TFM_Fabio_Santos_Lobao.pdf" target="_blank">Master dissertation: Intelligent Radio Spectrum Monitoring</a></h4>
-                <p>&quot;<em>This master dissertation provide an overview about the &quot;Spectrum Cortex&quot; project, presenting the system architecture and pilot system development. The "spectrum cortex" project was briefly described above, on the <a href="#Projects">Projects</a> section </em>&quot;.</p>
+                <p>This master dissertation provide an overview about the &quot;Spectrum Cortex&quot; project, presenting the system architecture and pilot system development. The "spectrum cortex" project was briefly described above, on the <a href="#Projects">Projects</a> section.</p>
               </div>
             </div>
           </div>
