--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p>PDF functions and channel usage patterns are shared between stations allowing for faster collection of data and further generalization of the models created by clustering of the individual PDF functions around centroids that represent specific usage patterns. The improved models based on the generalized functions may be used in future works to improve simulations and spectrum allocation strategies or to improve regulatory enforcement activities.</p>
             <p>As per architecture, the system uses microservices developed in C++ and Python running on linux servers, allowing for greater scalability. Data storage uses HDF5 format for better interoperability and easier data sharing. Complementary studies into radio spectrum ontologies was conducted in order to standardize as much as possible the metadata structure that is stored as attributes within each HDF5 file. Some of the most relevant metadata is and replicated into an MariaDB server that supports the graphical user interface (GUI).</p>
             <p>The pilot version that includes a bayesian carrier detector and basic analytics is available on github at <a href="https://github.com/FSLobao/Spectrum-Cortex" target="_blank">https://github.com/FSLobao/Spectrum-Cortex</a>.</p>
+            <p>A detailed description is presented on the master dissertation tesis <a href="documents/20190916_TFM_Fabio_Santos_Lobao.pdf" target="_blank">Intelligent Radio Spectrum Monitoring</a>.</p>
             <figure style="max-width:924pxpx" id="w-node-3346591a40ba-c276667f" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
               <div><img src="images/monitoring-diagram.svg" alt=""></div>
             </figure>
@@ -224,7 +225,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="w-clearfix w-col w-col-1"><img src="images/united-kingdom.svg" width="30" height="30" alt="Text in english" class="image-2"></div>
               <div class="w-col w-col-11">
                 <h4><a href="documents/20190916_TFM_Fabio_Santos_Lobao.pdf" target="_blank">Master dissertation: Intelligent Radio Spectrum Monitoring</a></h4>
-                <p>This master dissertation provide an overview about the &quot;Spectrum Cortex&quot; project, presenting the system architecture and pilot system development. The "spectrum cortex" project was briefly described above, on the <a href="#Projects">Projects</a> section.</p>
+                <p>This master dissertation provide an overview about the &quot;<em>Spectrum Cortex</em>&quot; project, presenting the system architecture and pilot system development. This project is briefly described above, on the <a href="#Projects">Projects</a> section.</p>
               </div>
             </div>
           </div>
